# Euphoria_Company

./: pyproject.toml
Euphoria Company Portfolio/: check-page-pw.mjs  check-page.js  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  temp.css  vite.config.js
Euphoria Company Portfolio/docs/plans/: 2026-02-21-euphoria-company-design.md  2026-02-21-euphoria-company-plan.md
Euphoria Company Portfolio/public/: scene-clean.splinecode
Euphoria Company Portfolio/src/: App.jsx  index.css
Euphoria Company Portfolio/src/components/: Footer.jsx  Hero.jsx  Navbar.jsx  Portfolio.jsx  Process.jsx  Services.jsx  Testimonials.jsx
Euphoria Company Portfolio/src/components/ui/: beams-background.tsx  bottom-nav-bar.tsx  button.tsx  flow-button.tsx  gallery-hover-carousel.tsx  logos3.tsx  shooting-stars.tsx  stagger-testimonials.tsx  testimonial-card.tsx  testimonials-with-marquee.tsx
app/: main.py
app/models/: __init__.py  chat.py  product.py
app/services/: chat_service.py  intent_classifier.py  llm_service.py  product_service.py  rules_handler.py  session_service.py
docs/plans/: 2026-02-22-ecommerce-ai-chatbot-design.md  2026-02-22-ecommerce-ai-chatbot-implementation-plan.md
ecommerce-chatbot/: README.md
teleprompter-app/: app.js  index.html
tests/: test_chat_endpoint.py  test_chat_integration.py  test_chat_models.py  test_intent_classifier.py  test_llm_service.py  test_main.py  test_product_models.py  test_product_service.py  test_rules_handler.py  test_session_service.py
